# jacks-first-game

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  MyIcon.icns  README.md  cmake_install.cmake  jacks-first-game  main  main.cpp  release.sh  run.sh
MyGame.app/Contents/: Info.plist
MyGame.app/Contents/MacOS/: jacks-first-game
common/: objloader.hpp
package/: jacks-first-game
shaders/: FragmentShader.glsl  VertexShader.glsl
